# rag4p

./: .gitignore  README.md  pyproject.toml  sync_versions.py
data/: questions_answers.csv
data/quality/: quality_of_answer_from_context_user.txt  quality_of_answer_to_question_user.txt
rag4p/: app_answer_generator.py  app_answer_quality.py  app_complete.py  app_complete_local.py  app_complete_weaviate.py  app_generation_answer_bedrock.py  app_generation_answer_generator.py  app_generation_answer_quality.py  app_generation_answer_quality_ollama.py  app_generation_question_generator.py  app_generation_questions_generator_vasa.py  app_indexer.py  app_indexer_weaviate.py  app_indexing_chain_retrieval_local.py  app_indexing_local.py  app_indexing_opensearch.py  app_indexing_semantic_openai.py  app_indexing_weaviate.py  app_question_generator.py  app_questions_generator_vasa.py  app_retrieval_quality_vasa.py  app_retrieval_retriever_local.py  app_retrieval_retriever_opensearch.py  app_retrieval_retriever_weaviate.py  app_retrieval_strategy.py  app_retriever.py  app_retriever_quality_vasa.py  app_retriever_weaviate.py  app_weaviate_info.py  logging_config.py  vasa_content_reader.py
rag4p/connectopenai/: __init__.py  max_token_splitter.py  openai_answer_generator.py  openai_embedder.py  openai_question_generator.py
rag4p/connectweaviate/: access_weaviate.py  chunk_collection.py  weaviate_content_store.py  weaviate_retriever.py
rag4p/domain/: chunk.py  input_document.py  relevant_chunk.py  retrieval_output.py
rag4p/generation/: answer_generator.py  observed_answer_generator.py  question_generator.py
rag4p/indexing/: SentenceSplitter.py  content_reader.py  content_store.py  embedder.py  indexing_response.py  indexing_service.py  jsonl_content_reader.py  single_chunk_splitter.py  splitter.py  splitter_chain.py
rag4p/indexing/splitters/: max_token_splitter.py  section_splitter.py  semantic_splitter.py  sentence_splitter.py  single_chunk_splitter.py
rag4p/integrations/bedrock/: __init__.py  access_bedrock.py  bedrock_answer_generator.py  (+1 more)
rag4p/onnxembedder/: onnx_embedder.py
rag4p/quality/: answer_from_context_quality.py  answer_quality.py  answer_quality_service.py  question_answer_record.py  question_generator_service.py  retrieval_quality_service.py
rag4p/retrieval/: observed_retriever.py  retrieval_strategy.py  retriever.py  topn_retrieval_strategy.py  window_retrieval_strategy.py
rag4p/store/: internal_content_retriever.py  internal_content_store.py
rag4p/tracker/: rag_observer.py  rag_tracker.py
rag4p/util/: key_loader.py
tests/connectopenai/: max_token_splitter_test.py
tests/data/: questions_answers.csv
tests/indexing/: test_sentence_splitting.py  test_splitter_chain.py
tests/quality/: test_retrieval_quality_service.py
tests/store/: test_internal_content_store.py
tests/util/: test_key_loader.py
(+61 files in other folders)
