[tool.poetry]
name = "rag4p"
version = "0.8.8"
description = "This project I use a lot for workshops, it contains some utils for splitters, tokenizers, and a weaviate client that I reuse a lot"
authors = ["Jettro Coenradie <jettro.coenradie@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
nltk = "^3.8.1"
openai = "^1.13"
pycryptodome = "^3.20.0"
requests = "^2.31.0"
configparser = "^6.0.0"
python-dotenv = "^1.0.0"
pandas = "^2.1.4"
scipy = "^1.11.4"
onnxruntime = "^1.18.0"
tokenizers = "^0.19.1"
unidecode = "^1.3.8"
weaviate-client = {version = "^4.0.0", allow-prereleases = false}
tiktoken = "^0.7.0"
opensearch-py = "^2.6.0"
boto3 = "^1.34.125"
requests-aws4auth = "^1.2.3"


[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
