[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "rag4p"
version = "0.12.0"
description = "This project I use a lot for workshops, it contains some utils for splitters, tokenizers, and a weaviate client that I reuse a lot"
authors = [ "Jettro Coenradie <jettro.coenradie@gmail.com>",]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
nltk = "3.9.1"
openai = "1.54.4"
pycryptodome = "3.21.0"
requests = "2.32.3"
configparser = "6.0.1"
python-dotenv = "1.0.1"
pandas = "2.2.3"
scipy = "1.14.1"
tokenizers = "0.20.3"
unidecode = "1.3.8"
weaviate-client = "4.9.3"
tiktoken = "0.8.0"
opensearch-py = "2.7.1"
boto3 = "1.35.63"
requests-aws4auth = "1.3.1"

[tool.poetry.scripts]
sync-versions = "sync_versions:sync_versions"

[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"

[tool.poetry.group.dev.dependencies]
toml = "^0.10.2"
