[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "rag4p"
version = "0.13.3"
description = "This project I use a lot for workshops, it contains some utils for splitters, tokenizers, and a weaviate client that I reuse a lot"
authors = [ "Jettro Coenradie <jettro.coenradie@gmail.com>",]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
nltk = "3.9.1"
openai = ">=1.63.2,<2.0.0"
pycryptodome = "3.21.0"
requests = "2.32.3"
configparser = "7.1.0"
python-dotenv = "1.0.1"
pandas = "2.2.3"
scipy = "1.14.1"
tokenizers = "0.20.3"
unidecode = "1.3.8"
weaviate-client = ">=4.11.0,<5.0.0"
tiktoken = ">=0.9.0,<1.0.0"
opensearch-py = ">=2.8.0, <2.9.0"
boto3 = ">=1.36.24, <1.37.0"
requests-aws4auth = "1.3.1"

[tool.poetry.scripts]
sync-versions = "sync_versions:sync_versions"

[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"

[tool.poetry.group.dev.dependencies]
toml = "^0.10.2"
